add default password protection for rutorrent

--- a/root/defaults/nginx.conf
+++ b/root/defaults/nginx.conf
@@ -38,6 +38,8 @@ upstream backendrtorrent {
 server {
 	listen 443 ssl http2 default_server;
 	root /var/www/localhost/rutorrent;
+	auth_basic "Administrator Login";
+	auth_basic_user_file /config/rutorrent/.htpasswd;
 	index index.html index.htm index.php;
 
 	server_name _;
